--- a/daily_readings/2024-11-04.md
+++ b/daily_readings/2024-11-04.md
@@ -1,19 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Journal Entry: Uploading Brains</title>
-</head>
-<body>
-    <h1>Journal Entry: Uploading Brains</h1>
-    <p>I recently came across the concept of uploading brains, inspired by the series "Pantheon." The idea revolves around humans being able to live in a virtually simulated environment by uploading their brains. This involves mapping the neural connections made by the brain using high-tech lasers and capturing every layer of the brain to its micrometer precision.</p>
+# Journal Entry: Uploading Brains
 
-    <h2>Successfully Uploaded Brains</h2>
-    <p>Scientists have successfully uploaded the following brains:</p>
-    <ul>
-        <li><strong>Brain of Nematode Worm</strong> - Scientific Name: <em>Caenorhabditis elegans (C. elegans)</em></li>
-        <li><strong>Brain of a Fruit Fly</strong> - Scientific Name: <em>Drosophila melanogaster</em></li>
-    </ul>
-</body>
-</html>
+I recently came across the concept of uploading brains, inspired by the series "Pantheon." The idea revolves around humans being able to live in a virtually simulated environment by uploading their brains. This involves mapping the neural connections made by the brain using high-tech lasers and capturing every layer of the brain to its micrometer precision.
+
+## Successfully Uploaded Brains
+
+Scientists have successfully uploaded the following brains:
+
+- **Brain of Nematode Worm** - Scientific Name: *Caenorhabditis elegans (C. elegans)*
+- **Brain of a Fruit Fly** - Scientific Name: *Drosophila melanogaster*
